stylesheets/styles.css
a,
abbr,
acronym,
address,
applet,
article,
aside,
audio,
b,
big,
blockquote,
body,
canvas,
caption,
center,
cite,
code,
dd,
del,
details,
dfn,
dialog,
div,
dl,
dt,
em,
embed,
fieldset,
figcaption,
figure,
font,
footer,
form,
h1,
h2,
h3,
h4,
h5,
h6,
header,
hgroup,
hr,
html,
i,
iframe,
img,
ins,
kbd,
label,
legend,
li,
main,
mark,
menu,
meter,
nav,
object,
ol,
output,
p,
pre,
progress,
q,
rp,
rt,
ruby,
s,
samp,
section,
small,
span,
strike,
strong,
sub,
summary,
sup,
table,
tbody,
td,
tfoot,
th,
thead,
time,
tr,
tt,
u,
ul,
var,
video,
xmp {
 border:0;
 margin:0;
 padding:0;
 font-size:100%;
}

html, body {
    background-color: var(--bkg-color);
    color: var(--text-color);
    font-family: 'Roboto', sans-serif;
}

body {
    --text-color: #1a202c;
    --bkg-color: #f0e7db;
    --header-color: #f6f0e8;
  }

body.dark-theme {
    --text-color: #ededed;
    --bkg-color: #202023;
    --header-color: #323234;
  }
  
  @media (prefers-color-scheme: dark) {
    /* defaults to dark theme */
    body {
      --text-color: #ededed;
      --bkg-color: #202023;
      --header-color: #323234;
    }
    body.light-theme {
      --text-color: #1a202c;
      --bkg-color: #f0e7db;
      --header-color: #f6f0e8;
    }
  }

.header {
    background: var(--header-color);
    box-shadow: 0 0 2px rgba(0, 0, 0, 0.6);
    height: 55px;
    position: fixed;
    top:0;
    width:100%;
    z-index: 100;
}

.header-inner {
    max-width: 960px;
    height: 55px;
    margin: 0 auto;
    position: relative;
    display: flex;
    z-index: 99; 
    padding-left: 10px;
    padding-right: 10px;
}

.header-nav-item {
    display: flex; 
    align-items: center;
    height: 55px;
    padding: 0 20px;
    padding-top: 0px;
    font-weight: 300;
    font-size: 14px;
    color: var(--text-color);
    z-index: 3;
    position: relative;
}

a {
    background-color: transparent;
    text-decoration: none;
}

.footer {
  background: var(--bkg-color);
  height: 84px;
  position: relative;
  z-index: 100;
  width: 100%;
}

.footer-inner {
  max-width: 960px;
  height: 44px;
  margin: 0 auto;
  position: relative;
  display: flex;
  z-index: 99; 
  padding-left: 10px;
  padding-right: 10px;
}

.footer-item {
  display: flex; 
  align-items: center; 
  padding: 0 10px;
  padding-top: 0px;
  font-weight: 300;
  font-size: 14px;
  color: var(--text-color);
  z-index: 3;
  position: relative;
}

.button404 {
  display: inline-flex;
  appearance: none;
  align-items: center;
  justify-content: center;
  user-select: none;
  white-space: nowrap;
  border-width : 0;
  line-height: 1.2;
  border-radius: 0.375rem;
  height: 2.5rem;
  min-width: 2.5rem;
  font-size: 1rem;
  padding-inline-start: 1rem;
  padding-inline-end: 1rem;
  background: #1791ba;
  color: var(--text-color);
  font-family: 'Roboto', sans-serif;
}

.button404:hover {
  background: #199bc6;
}

.button404:focus {
  box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.6);
}

.content-heading{
  font-size: 20px; 
  padding-bottom: 15px; 
  text-decoration: underline;
  text-decoration-color: currentcolor;
  text-decoration-thickness: auto;
  text-underline-offset: 6px;
  text-decoration-color: #525252;
  text-decoration-thickness: 3px;
}

.carousel img {
  display: block;
  height: 400px;
  margin-right: 15px;
  border-radius: 0.375rem;
}

@media screen and ( min-width: 768px ) {
  .carousel img {
    height: 400px;
  }
}

.standings-card {
  display: block;
  border-radius: 0.375rem;
  height: auto;
  width: auto;
  background: var(--header-color);
  color: var(--text-color);
  font-family: 'Roboto', sans-serif;
}

.standings-card img{
  border-top-left-radius:0.375rem;
  border-top-right-radius:0.375rem;
  object-fit: cover;
  width: 100%;
  display: block;
  height: 200px;
  margin-bottom: 10px;
}

.standings-card h3{
  margin-left: 10px;
  padding-bottom: 10px;
}

.standings-card:hover{
  background: #5881a8;
}

.standings-card:focus {
  box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.6);
}

.schedule-card {
  display: block;
  border-radius: 0.375rem;
  height: auto;
  width: auto;
  background: var(--header-color);
  color: var(--text-color);
  font-family: 'Roboto', sans-serif;
}

.schedule-card img{
  border-top-right-radius:0.375rem;
  border-bottom-right-radius:0.375rem;
  object-fit: cover;
  height: 100%;
  display: block;
  padding: 0px;
}

.form-inputs
{
  display: inline-flex;
  appearance: none;
  align-items: center;
  justify-content: center;
  user-select: none;
  white-space: nowrap;
  border-width : 0;
  line-height: 1.2;
  border-radius: 0.375rem;
  height: 2.5rem;
  min-width: 2.5rem;
  font-size: 1rem;
  padding-inline-start: 1rem;
  padding-inline-end: 1rem;
  font-family: 'Roboto', sans-serif;
  margin-bottom: 15px;
  max-width: inherit;
  resize: vertical;
}

